<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_locador"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_quadra_locador" />

    <item
        android:id="@+id/navigation_locacao_quadra_locador"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_locacao_locador" />

    <item
        android:id="@+id/navigation_notifications_locador"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications_locador" />
    <item
        android:id="@+id/navigation_locatario"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_qudra_locatario" />
    <item
        android:id="@+id/navigation_locacao_quadra_locatario"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_locacao_quadra_locatario" />
    <item
        android:id="@+id/navigation_notifications_locatario"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications_locatario" />

</menu>