<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_locador">

    <fragment
        android:id="@+id/navigation_locador"
        android:name="com.example.easyschedule.view.locador.ui.quadras.QuadrasLocadorFragment"
        android:label="@string/title_quadra_locador"
        tools:layout="@layout/fragment_quadras_locador" />

    <fragment
        android:id="@+id/navigation_locacao_quadra_locador"
        android:name="com.example.easyschedule.view.locador.ui.locacao.LocacaoQuadraLocadorFragment"
        android:label="@string/title_locacao_locador"
        tools:layout="@layout/fragment_locacao_quadra_locador" />

    <fragment
        android:id="@+id/navigation_notifications_locador"
        android:name="com.example.easyschedule.view.locador.ui.notifications.NotificationsLocadorFragment"
        android:label="@string/title_notifications_locador"
        tools:layout="@layout/fragment_notifications_locador" />
</navigation>